# remote_hillel_project

app_lib_solution/: CMakeLists.txt
app_lib_solution/cmake/modules/: warnings.cmake
app_lib_solution/src/app/: CMakeLists.txt  app.cpp
app_lib_solution/src/lib/: CMakeLists.txt  lib.cpp  lib.h
